# Fitness-Data-Projekt

./: .gitignore  README.md  pyproject.toml  temp.csv  utils.py
data/2024-08/CSV/SLEEP/: sleep_data.csv
data/2024-08/FIT/1/: 269451311301_WELLNESS.fit  269451318639_METRICS.fit  269451326542_METRICS.fit  269451331216_METRICS.fit  269451365892_HRV_STATUS.fit  269451377099_SLEEP_DATA.fit  269485522342_WELLNESS.fit  269519592541_WELLNESS.fit  269551312146_WELLNESS.fit  269585546930_WELLNESS.fit  269585565564_METRICS.fit
data/2024-08/FIT/10/: 271626447798_WELLNESS.fit  271626514920_METRICS.fit  271626519692_METRICS.fit  271626524088_METRICS.fit  271626529477_METRICS.fit  271626632130_HRV_STATUS.fit  271626650782_SLEEP_DATA.fit
data/2024-08/FIT/11/: 271626489710_WELLNESS.fit  271626491696_WELLNESS.fit  271626508351_WELLNESS.fit  271626533517_METRICS.fit  271626537942_METRICS.fit  271626542541_METRICS.fit  271626546948_METRICS.fit  271626550841_METRICS.fit  271626637314_HRV_STATUS.fit  271626652851_SLEEP_DATA.fit  271629454954_METRICS.fit  271629455705_WELLNESS.fit  271629456207_WELLNESS.fit  271634360764_WELLNESS.fit  271634366408_METRICS.fit  271634371198_METRICS.fit  271668683254_WELLNESS.fit  271668696029_METRICS.fit
data/2024-08/FIT/12/: 271668691112_WELLNESS.fit  271668699461_METRICS.fit  271731435903_WELLNESS.fit  271731441255_METRICS.fit  (+5 more)
part2/: SleepState.py  __main__.py  utils.py
src/: CSV_Merger.py  GraphPlotter.py  ScatterFigure.py  ScatterPlotter.py  csv_columns.py  csv_formatter.py  csv_merger.py  csv_plotter.py  plotter.py  utils.py
(+1289 files in other folders)
