[tool.poetry]
name = "Fitness Data Projekt"
version = "v1.0.0"
description = ""
authors = [
  "Luca Jakob <luca.jakob@stud.fhgr.ch>",
  "Silvan Joos <silvan.joos@stud.fhgr.ch>",
  "Joel Hallauer <joel.hallauer@stud.fhgr.ch>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
