[tool.poetry]
name = "Fitness Data Projekt"
version = "v1.0.0"
description = ""
authors = [
  "Luca Jakob <luca.jakob@stud.fhgr.ch>",
  "Silvan Joos <silvan.joos@stud.fhgr.ch>",
  "Joel Hallauer <joel.hallauer@stud.fhgr.ch>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
